# avesia

./: .gitignore  Cargo.toml  LICENSE  README.md  Taskfile.yml
.github/workflows/: ci.yml
avesia/: Cargo.toml
avesia-api-driver/: package-lock.json  types.ts
avesia-api-driver/protocols/: web.ts
avesia-desktop/src/: lib.rs
avesia-mmd/: Cargo.toml  README.md
avesia-mmd/src/: lib.rs  parser.rs
avesia-render/: Cargo.toml
avesia-render/src/: lib.rs  main.rs
avesia-server/: Cargo.toml
avesia-web/: Taskfile.yml  index.html  package-lock.json  package.json  vite.config.ts
avesia-web/src/: App.css  App.tsx  main.tsx
avesia-web/src/ui/components/: Docking.tsx  HeaderBar.tsx  QuickActionBar.tsx
avesia-web/src/ui/icons/: icons.tsx
avesia-web/src/ui/layouts/: AppLayout.tsx
avesia-web/src/ui/pages/: MainWindowPage.tsx
avesia/src/: main.rs
backend/avesia-desktop/: Cargo.toml
backend/avesia-desktop/src/: server.rs
backend/avesia-webserver/: Cargo.toml
gpu/a3d/: Cargo.toml  README.md
gpu/a3d/src/: lib.rs
gpu/avesia-render/: Cargo.toml
gpu/avesia-render/src/: lib.rs
ui/avesia-api-driver/: interface.ts  package.json
ui/avesia-web/: Taskfile.yml  index.html  package-lock.json  vite.config.ts
ui/avesia-web/src/: App.css
ui/avesia-web/src/ui/components/: HeaderBar.tsx  QuickActionBar.tsx
ui/avesia-web/src/ui/icons/: icons.tsx
ui/avesia-web/src/ui/pages/: MainWindowPage.tsx
ui/shigure/: Cargo.toml  README.md
