[package]
name = "avesia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avesia-desktop = { path = "../backend/avesia-desktop", optional = true }
avesia-webserver = { path = "../backend/avesia-webserver", optional = true }

[features]
default = ["desktop"]
desktop = ["dep:avesia-desktop"]
webserver = ["dep:avesia-webserver"]
